Fixed bug #39969 (ini setting short_open_tag has no effect when using --enable-maintainer-zts)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@227094 c90b9560-bf6c-de11-be94-00142212c4b1